fixed effects overflow

--- a/styles/tracker.scss
+++ b/styles/tracker.scss
@@ -147,7 +147,7 @@
 
                         .__effects {
                             height: 20px;
-                            overflow: hidden;
+                            display: flex;
 
                             > img {
                                 width: 16px;
